# PhotoSuit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  spec.md
app/: cli.py  compositor.py  copilot_agent.py  designer.py  exif_parser.py  gui.py  normalizer.py  pipeline.py  rasterizer.py  renderer.py
app/templates/default_white/: config.json
app/templates/film_strip/: config.json
tests/: test_pipeline.py
